perrelle designs page complete

--- a/browser/js/pdesigns/pdesigns.html
+++ b/browser/js/pdesigns/pdesigns.html
@@ -13,7 +13,7 @@
 					<div class="col-sm-6 pdesigns-text">
 						<p>I founded Perrelle Designs (originally known as Evergreen Biotechnology) in 2010 with my brother, Jeremy, after noticing the long lines at our grocery store's bottle return machines (known as reverse vending machines).  After some research, we saw a hole in the market - all of the reverse vending machines on the market were single-feed.  Inspired by the potential to transform the market, while also delivering a social good (by encouraging recycling), we set out to construct the first ever bulk-feed reverse vending machine.</p>
 						<br>
-						<p>Having no engineering background, the project was ambitious.  We spent months building a working and economical prototype, eventually engaging in discussions with one of the leading companies in the market (Tomra) about or work.  And although Tomra decline to pursue our prototype, it was a great experience, and I learned some very valuable lessons about product development.</p>
+						<p>Having no engineering background, the project was ambitious.  We spent months building a working and economical prototype, eventually engaging in discussions with one of the leading companies in the market (Tomra) about or work.  And although Tomra declined to pursue our prototype, it was a great experience, and I learned some very valuable lessons about product development.</p>
 					</div>
 					<div class="col-sm-6 bulk-rvm">
 						<iframe width="100%" height="300" src="https://www.youtube.com/embed/6rDZH800PkQ" frameborder="0" allowfullscreen></iframe>
@@ -23,15 +23,58 @@
 			</div>
 			<div class="row even-pdesigns-div">
 				<div class="col-xs-10 col-xs-offset-1">
-					<h4 class="text-center">Transition</h4>
-					<div class="col-sm-6 transition">
-						<img src="/images/pdesigns.homepage.png" />
-						<h5><a href="http://www.perrelledesigns.com">Perrelle Designs Homepage</a></h5>
+					<h4 class="text-center">Rebrand</h4>
+					<div class="col-sm-6 rebrand">
+						<div class="proto">
+							<h5>Our First Prototype</h5>
+						</div><div class="elephant">
+							<h5>Our Most Popular Lamp - An Elephant Lamp</h5>
+						</div>
 					</div>
-					<div class="col-sm-6">
-						<p>I founded Perrelle Designs (originally known as Evergreen Biotechnology) in 2010 with my brother, Jeremy, after noticing the long lines at our grocery store's bottle return machines (known as reverse vending machines).  After some research, we saw a hole in the market - all of the reverse vending machines on the market were single-feed.  Inspired by the potential to transform the market, while also delivering a social good (by encouraging recycling), we set out to construct the first ever bulk-feed reverse vending machine.</p>
+					<div class="col-sm-6 pdesigns-text">
+						<p>After some reflection on the successes and failures of the Bulk RVM prototype, my brother and I decided that the next company product should be something on a smaller, more manageable scale.  Finding that there was a strong market for personalized goods, we developed the Letter Lamp, which is a lamp whose base is a letter of the alphabet.  We created this product because there was no such lamp available in the marketplace.</p>
 						<br>
-						<p>Having no engineering background, the project was ambitious.  We spent months building a working and economical prototype, eventually engaging in discussions with one of the leading companies in the market (Tomra) about or work.  And although Tomra decline to pursue our prototype, it was a great experience, and I learned some very valuable lessons about product development.</p>
+						<p>We renamed the company Perrelle Designs, and refocused our mission on delivering quality products with great customer service.  With an initial investment of just $1,000, we purchased machines and supplies, and started developing the first prototypes.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-10 col-xs-offset-1">
+					<h4 class="text-center">Growth</h4>
+					<div class="col-sm-6 pdesigns-text">
+						<p>I ran the company while also working full-time as an attorney.  I developed all of our new products and oversaw every phase of the product lifecycle, including researching new product ideas, conceptualizing the designs, building prototypes, manufacturing the finished products, and marketing the products for sale.  I also oversaw the day-to-day operations of the company, including communicating with vendors and customers, handling company logistics and maintaining the company's books and records.</p>
+						<br>
+						<p>We have focused our retail efforts on online marketplaces, and currently sell our products on Etsy, Amazon Handmade and Houzz, as well as our own website, PerrelleDesigns.com.  Some of the the successes that the company has been able to achieve include:
+							<ul>
+								<li>100% year-over-year sales growth for 2014 and 2015.</li>
+								<li>Over $100,000 in gross revenue for 2015.</li>
+								<li>Being a featured seller on Etsy.com's homepage.</li>
+								<li>Having an customer rating of 5 out of 5 stars on over 700 product reviews.</li>
+							</ul>
+						</p>
+						<br>
+						<p>At the end of 2015, I turned over most of the day to day operations to my Dad, who was looking for something to do in his retirement, so that I could focus on finding a new career in the tech field.  I do, however, still have a small role at the company, and continue to handle most of the interaction with customers, one of my favorite aspects of the job!</p>
+					</div>
+					<div class="col-sm-6 growth">
+						<div class="homepage-image" ng-mouseenter="homepageHover=true" ng-mouseleave="homepageHover=false">
+							<div class="overlay" ng-if="homepageHover">
+								<a href="http://www.perrelledesigns.com" target="_blank"><button class="pdesigns-btn">Perrelle Designs</button></a>
+							</div>
+						</div><div class="etsy-image" ng-mouseenter="etsyHover=true" ng-mouseleave="etsyHover=false">
+							<div class="overlay" ng-if="etsyHover">
+							<a href="http://etsy.com/shop/perrelledesigns" target="_blank"><button class="pdesigns-btn">Etsy</button></a>
+							</div>
+						</div>
+						<div class="amazon-image" ng-mouseenter="amazonHover=true" ng-mouseleave="amazonHover=false">
+							<div class="overlay" ng-if="amazonHover">
+								<a href="https://www.amazon.com/handmade/perrelledesigns" target="_blank"><button class="pdesigns-btn">Amazon Handmade</button></a>
+							</div>
+						</div><div class="houzz-image" ng-mouseenter="houzzHover=true" ng-mouseleave="houzzHover=false">
+							<div class="overlay" ng-if="houzzHover">
+								<a href="http://www.houzz.com/pro/perrelledesigns" target="_blank"><button class="pdesigns-btn">Houzz</button></a>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
