setting up nodemailer

--- a/browser/index.html
+++ b/browser/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <base href="/" />
-    <title>Jon Perrelle</title>
+    <title>Jon Perrelle | Portfolio</title>
 
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Assistant:300,400,700,800|Gloria+Hallelujah" rel="stylesheet">
+    <link rel="stylesheet" href="/angular-toastr/dist/angular-toastr.css" />
     <link rel="stylesheet" type="text/css" href="/main.css" />
 
     <script src="/jquery/dist/jquery.js"></script>
@@ -15,6 +16,7 @@
     <script src="/angular/angular.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/angular-messages/angular-messages.min.js"></script>
+    <script src="/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="/js/app.js"></script>
 
     <script src="/js/home/home.component.js"></script>
