--- a/browser/js/pdesigns/pdesigns.html
+++ b/browser/js/pdesigns/pdesigns.html
@@ -11,7 +11,7 @@
 				<div class="col-xs-10 col-xs-offset-1">
 					<h4 class="text-center">Founding</h4>
 					<div class="col-sm-6 pdesigns-text">
-						<p>I founded Perrelle Designs (originally known as Evergreen Biotechnology) in 2010 with my brother, Jeremy, after noticing the long lines at our grocery store's bottle return machines (known as reverse vending machines).  After some research, we saw a hole in the market - all of the reverse vending machines on the market were single-feed.  Inspired by the potential to transform the market, while also delivering a social good (by encouraging recycling), we set out to construct the first ever bulk-feed reverse vending machine.</p>
+						<p>I founded Perrelle Designs (originally known as Evergreen Biotechnology) in 2010 with my brother, Jeremy, after noticing the long lines at our grocery store's bottle return machines (known as reverse vending machines).  After some research, we saw a market opportunity - all of the reverse vending machines then-available were single-feed.  Inspired by the potential to transform the market, while also delivering a social good (by encouraging recycling), we set out to construct the first ever bulk-feed reverse vending machine.</p>
 						<br>
 						<p>Having no engineering background, the project was ambitious.  We spent months building a working and economical prototype, eventually engaging in discussions with one of the leading companies in the market (Tomra) about or work.  And although Tomra declined to pursue our prototype, it was a great experience, and I learned some very valuable lessons about product development.</p>
 					</div>
@@ -28,7 +28,7 @@
 						<div class="proto">
 							<h5>Our First Prototype</h5>
 						</div><div class="elephant">
-							<h5>Our Most Popular Lamp - An Elephant Lamp</h5>
+							<h5>Our Most Popular Lamp</h5>
 						</div>
 					</div>
 					<div class="col-sm-6 pdesigns-text">
@@ -42,14 +42,14 @@
 				<div class="col-xs-10 col-xs-offset-1">
 					<h4 class="text-center">Growth</h4>
 					<div class="col-sm-6 pdesigns-text">
-						<p>I ran the company while also working full-time as an attorney.  I developed all of our new products and oversaw every phase of the product lifecycle, including researching new product ideas, conceptualizing the designs, building prototypes, manufacturing the finished products, and marketing the products for sale.  I also oversaw the day-to-day operations of the company, including communicating with vendors and customers, handling company logistics and maintaining the company's books and records.</p>
+						<p>As my brother soon moved to California, I began running the company while also working full-time as an attorney.  I developed all of our new products and oversaw every phase of the product lifecycle, including researching new product ideas, conceptualizing the designs, building prototypes, manufacturing the finished products and marketing the products for sale.  I also oversaw the day-to-day operations of the company, including communicating with vendors and customers, handling company logistics and maintaining the company's books and records.</p>
 						<br>
-						<p>We have focused our retail efforts on online marketplaces, and currently sell our products on Etsy, Amazon Handmade and Houzz, as well as our own website, PerrelleDesigns.com.  Some of the the successes that the company has been able to achieve include:
+						<p>We focused our retail efforts on online marketplaces, and currently sell our products on Etsy, Amazon Handmade and Houzz, as well as our own website, PerrelleDesigns.com.  Some of the the successes that the company has been able to achieve include:
 							<ul>
 								<li>100% year-over-year sales growth for 2014 and 2015.</li>
 								<li>Over $100,000 in gross revenue for 2015.</li>
 								<li>Being a featured seller on Etsy.com's homepage.</li>
-								<li>Having an customer rating of 5 out of 5 stars on over 700 product reviews.</li>
+								<li>Having a customer rating of 5 out of 5 stars on over 700 product reviews.</li>
 							</ul>
 						</p>
 						<br>
