--- a/browser/js/portfolio/portfolio.html
+++ b/browser/js/portfolio/portfolio.html
@@ -25,7 +25,7 @@
 							<div class="portfolio-text" ng-if="graphitiHover">
 								<p class="title">Team Leader | Full Stack Developer</p>
 								<p class="desc">Graphiti is a data visualization web application that I built in two-and-a-half weeks with 3 other developers as my final project at Fullstack Academy. The purpose of the app was to allow users to easily create custom graphs using personal and publicly available datasets.</p>
-								<p class="desc">I was the team leader of the project, and oversaw production from creation to deployment.  Using Agile Methodologies, I managed the scrum board, conducted daily stand-ups, and ensured timely delivery of a quality product.  I also developed some of the app's features, working with Node.js, AngularJS, D3.js, and AWS.</p>
+								<p class="desc">I was the team leader of the project, and oversaw production from creation to deployment.  Using Agile Methodologies, I managed the scrum board, conducted daily stand-ups and ensured timely delivery of a quality product.  I also developed some of the app's features, working with Node.js, AngularJS, D3.js, and AWS.</p>
 								<a href="http://graphiti.us" target="_blank"><button class="portfolio-btn"><i class="fa fa-link" aria-hidden="true"></i>Site</button></a>
 								<a href="http://github.com/jonperrelle/graphiti" target="_blank"><button class="portfolio-btn"><i class="fa fa-github" aria-hidden="true"></i>Source</button></a>
 							</div>
@@ -40,7 +40,7 @@
 						<div class="alex" ng-mouseenter="alexHover=true" ng-mouseleave="alexHover=false">
 							<div class="portfolio-text" ng-if="alexHover">
 								<p class="title">Full Stack Developer</p>
-								<p class="desc">Cooking-With-Alex is a voice-enabled cooking assistant web application that I personally built in a two-day hackathon. As someone who frequently cooks, I wanted to create an app that solved the problem of having to use my dirty hands to get receipe ingredients and directions from my device or cookbook while cooking.  The app reads back receipe information to users when triggered by verbal commands.</p>
+								<p class="desc">Cooking-With-Alex is a voice-enabled cooking assistant web application that I personally built in a two-day hackathon. As someone who frequently cooks, I wanted to create an app that solved the problem of having to use my dirty hands to get receipe ingredients and directions from my device or cookbook while cooking.  The app reads back receipe information based on verbal commands from the user.</p>
 								<p class="desc">I built this project using Node.js, AngularJS and the Web Speech API</p>
 								<a href="http://github.com/jonperrelle/cooking-with-alex" target="_blank"><button class="portfolio-btn"><i class="fa fa-github" aria-hidden="true"></i>Source</button></a>
 							</div>
@@ -54,7 +54,7 @@
 							<div class="portfolio-text" ng-if="scorestoreHover">
 								<p class="title">Team Leader | Full Stack Developer</p>
 								<p class="desc">Scorestore is an e-commerce mock-site that I built with 3 other developers at Fullstack Academy. Our site proposed to sell sheet music to musicians who wanted their music on high quality paper.</p>
-								<p class="desc">I was the team leader of this project as well, and led the agile development of the site.  I also developed some of the site's features, including the shopping cart, individual product pages, and admin dashboard.</p>
+								<p class="desc">I was the team leader of this project as well, and led the agile development of the site.  I also developed some of the site's features, including the shopping cart, individual product pages and admin dashboard.</p>
 								<a href="http://github.com/jonperrelle/scorestore" target="_blank"><button class="portfolio-btn"><i class="fa fa-github" aria-hidden="true"></i>Source</button></a>
 							</div>
 						</div>
