--- a/browser/js/resume/resume.html
+++ b/browser/js/resume/resume.html
@@ -16,28 +16,28 @@
 							<h4>Development</h4>
 							<p>I am currently working as a developer with a start-up, RUIn Gaming, that is creating a <a href="http://ruingaming.io">game-scheduling web application</a>.  I am also one of the creators of <a href="http://graphiti.us">Graphiti</a>, a data visualization web application, which was built in two-and-a-half weeks as my final project at Fullstack Academy.</p>
 							<h4>Attorney</h4>
-							<p>I managed over forty separate litigations during my six years as a practicing attorney, successfully arguing dozens of motions before the New York State Surrogate's Court and Appellate Division</p>
+							<p>I managed over forty separate litigations during my six years as a practicing attorney, successfully arguing dozens of motions before the New York State Surrogate's Court and Appellate Division.</p>
 							<h4>Entrepreneur</h4>
-							<p>While working full-time as an attorney, I founded and ran my own business, Perrelle Designs LLC, which manufactures and sells home decor products.  With a mission to deliver quality products and great customer service, we have been a featured seller on <a href="http://etsy.com/people/perrelledesigns">Etsy</a>, have generated over $100,000 in gross revenues for the last fiscal year, and our products have an average rating of 5 stars on over 700 customer reviews</p>
+							<p>While working full-time as an attorney, I founded and ran my own business, Perrelle Designs LLC, which manufactures and sells home decor products.  With a mission to deliver quality products and great customer service, we have been a featured seller on <a href="http://etsy.com/people/perrelledesigns">Etsy</a>, generated over $100,000 in gross revenues for the last fiscal year, and a 5/5 star rating on over 700 customer reviews.</p>
 						</div>
 					</div>
 					<div id="experience">
 						<h3 ng-click="expDetails=!expDetails">Professional Experience</h3>
 						<div ng-if="expDetails">
 							<h4>RUIn Gaming</h4>
-							<h5>Full stack developer, August 2016 to Present</h5>
-							<p>I am currently working as a full stack developer to develop a game-scheduling web application using the MEAN Stack.  One of the greatest benefits of this role is that I am not only gaining development experience, but I am also gaining real world experience in the process of developing a technology product.</p>
+							<h5>Full Stack Developer, August 2016 to Present</h5>
+							<p>I am currently working as a full stack developer to develop a game-scheduling web application using the MEAN Stack.  One of the greatest benefits of this role is not only the development experience, but I am also gaining real world experience in the process of developing a technology product.</p>
 							<p> Visit my <a ui-sref='portfolio'>Portfolio</a> to view more.</p>
 							<h4>McCoyd, Parkas & Ronan LLP</h4>
 							<h5>Senior Associate Attorney, November 2011 to March 2016</h5>
 							<p>Before entering the tech field, I was an attorney at McCoyd, Parkas & Ronan, LLP.  During my time there, I oversaw the life cycle of over forty separate litigations, from case intake to conclusion. As part of my primary responsibilities, I managed other attorneys and staff, identified and analyzed key issues, developed arguments and strategies, negotiated among, and worked with, different stakeholders with competing needs and crafted creative solutions to critical problems.  In addition, I regularly appeared in Court, successfully arguing dozens of motions.</p>
 							<h4>Perrelle Designs LLC</h4>
 							<h5>Founder and CEO, September 2010 to March 2016</h5>
-							<p>While working full-time as an attorney, I founded and ran my own business as an outlet to pursue my passion for building new products.  For several years during my free time, I designed, developed, manufactured and sold new home decor products on online marketplaces</p>
+							<p>While working full-time as an attorney, I founded and ran my own business as an outlet to pursue my passion for building new products.  For several years during my free time, I designed, developed, manufactured and sold new home decor products on online marketplaces.</p>
 							<p><a ui-sref='pdesigns'>Click Here</a> to learn more about my work at Perrelle Designs.</p>
 							<h4>Cleary Gottlieb Steen & Hamilton LLP</h4>
 							<h5>Associate Attorney, September 2009 to September 2010</h5>
-							<p>Following my graudation of law school, I joined Cleary Gottlieb Steen and Hamilton, one of the top law firms in the world, as a litigation attorney.  I was given enormous responsibility during my time there, which including managing teams of as many as 8 other attorneys in document review projects for high-profile securites and shareholder litigations.  I also researched and and analyzed case law, and draft papers on complex legal issues.</p>
+							<p>Following my graudation from law school, I joined Cleary Gottlieb Steen and Hamilton, one of the top law firms in the world, as a litigation attorney.  I was given enormous responsibility during my time there, which included managing teams of as many as 8 other attorneys in document review projects for high-profile securities and shareholder litigations.  I also researched and and analyzed case law, and drafted papers on complex legal issues.</p>
 						</div>
 					</div>
 					<div id="skills">
@@ -52,13 +52,13 @@
 						<h3 ng-click="educDetails=!educDetails">Education</h3>
 						<div ng-if="educDetails">
 							<h4>Fullstack Academy of Code</h4>
-							<h5>Certification of Completion, April 2016 to July 2010</h5>
+							<h5>Certification of Completion, April 2016 to July 2016</h5>
 							<p>Fullstack Academy is a 17-week immersive software development program, focusing on JavaScript.  Visit my <a ui-sref='portfolio'>Portfolio</a> to see more of what I did at Fullstack</p>
 							<h4>Brooklyn Law School</h4>
-							<h5>Juris Doctor, Summa Cum Laude, August 2006 to June 2009</h5>
+							<h5>Juris Doctor, <i>Summa Cum Laude</i>, August 2006 to June 2009</h5>
 							<p>Class Rank: 2/499 | GPA: 4.02<br>Dean's List, All Semesters<br>Second Scholarship Prize<br>Executive Notes and Comments Editor, <i>Brooklyn Law Review</i></p>
 							<h4>University of Pennsylvania</h4>
-							<h5>Bachelor of Arts, Magna Cum Laude, September 2002 to December 2005</h5>
+							<h5>Bachelor of Arts, <i>Magna Cum Laude</i>, September 2002 to December 2005</h5>
 							<p>GPA: 3.63<br>Dean's List, 2004-2005</p>
 						</div>
 					</div>
