including home image

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,5 +1,6 @@
 <section>
 	<div class="container-fluid">
+		<div class="home-image row"></div>
 		<div class="row home-intro text-center">
 			<img class="headshot" src="images/headshot.jpg" />
 			<header>
