--- a/browser/index.html
+++ b/browser/index.html
@@ -4,6 +4,8 @@
     <base href="/" />
     <title>Jon Perrelle | Portfolio</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Assistant:300,400,700,800|Gloria+Hallelujah" rel="stylesheet">
