--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,6 +1,6 @@
 <section>
 	<div class="container-fluid">
-		<div class="home-image row"></div>
+		<div class="row home-image"></div>
 		<div class="row home-intro text-center">
 			<img class="headshot" src="images/headshot.jpg" />
 			<header>
@@ -14,31 +14,28 @@
 			<header>
 				<h2>About Me</h2>
 			</header>
-			<div>
-				<div class="col-sm-2"></div>
-				<div class="col-sm-8">
+			<div class="row">
+				<div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
 					<p>I love building innovative and meaningful products and am looking for opportunities to join an innovative and fast-paced product management team.   I am currently working as a full stack developer at RUIn Gaming, a start-up developing a game scheduling web application.  I also oversee some of the operations of Perrelle Designs, a home decor manufacturing and retail business that I founded.   Prior to becoming a developer, I practiced as a litigation attorney for over five years in New York.</p>
 					<br>
 					<p>When not working, I love being outdoors, cooking, playing games and watching movies.   My ideal day would include a round of golf, backyard barbeque, and a good movie.
 					</p>
 				</div>
-				<div class="col-sm-2"></div>
 			</div>
 		</div>
 		<div class="row text-center contact" id="contact">
-			<div class="col-sm-2"></div>
-			<div class="col-sm-8">
+			<div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
 				<header>
 					<h2>Contact Me</h2>
+					<h4>Submit your question below, or email me @ <a href="mailto:jonperrelle@gmail.com">jonperrelle@gmail.com</a></h4>
 				</header>
 				<div>
-					<h4>Submit your question below, or email me @ <a href="mailto:jonperrelle@gmail.com">jonperrelle@gmail.com</a></h4>
 					<form name="contactForm" ng-submit="contactForm.$valid && $ctrl.sendEmail(email)" class="contact-form" novalidate>
-						<div class="col-sm-8">
+						<div class="col-xs-12">
 							<div>
 					            <input type="text" name="name" placeholder="Name" ng-model="email.name" required>
 					            <div ng-messages="contactForm.name.$error" ng-if="contactForm.$submitted">
-					                <div ng-message="required" class="text-danger">Pleae enter your name!</div>
+					                <div ng-message="required" class="text-danger">Please enter your name!</div>
 					            </div>
 					        </div>
 					        <div>
@@ -58,13 +55,12 @@
 					            </div>
 					        </div>
 					    </div>
-					    <div class="col-sm-4 send-email">
+					    <div class="col-xs-12 send-email">
 				            <button type="submit" class="send-email-btn"><i class="fa fa-4x fa-paper-plane" aria-hidden="true"></i></button>
 					    </div>
 			        </form>
 				</div>
 			</div>
-			<div class="col-sm-3"></div>
 		</div>
 	</div>
 </section>
