--- a/browser/js/portfolio/portfolio.html
+++ b/browser/js/portfolio/portfolio.html
@@ -1,7 +1,7 @@
 <section>
 	<div class='container-fluid'>
-		<div class="row text-center">
-			<div class="row header">
+		<div class="text-center">
+			<div class="header">
 				<portfolio-header></portfolio-header>
 				<h3>Portfolio</h3>
 			</div>
