--- a/browser/js/resume/resume.html
+++ b/browser/js/resume/resume.html
@@ -1,13 +1,12 @@
 <section>
-	<div class='container-fluid'>
-		<div class="row text-center">
-			<div class="row header">
+	<div class='container'>
+		<div class="text-center">
+			<div class="header">
 				<portfolio-header></portfolio-header>
 				<h3>Resume</h3>
 			</div>
-			<div class="row">
-				<div class="col-sm-2"></div>
-				<div class="col-sm-8 resume-content">
+			<div>
+				<div class="col-sm-8 col-sm-offset-2 col-xs-12 resume-content">
 					<div id="summary">
 						<header>
 							<h3 ng-click="summaryDetails=!summaryDetails">Summary</h3>
@@ -72,7 +71,6 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-2"></div>
 			</div>
 		</div>
 	</div>
