--- a/browser/js/pdesigns/pdesigns.html
+++ b/browser/js/pdesigns/pdesigns.html
@@ -1,7 +1,7 @@
 <section>
 	<div class='container-fluid'>
 		<div class="row text-center">
-			<div class="row header">
+			<div class="header">
 				<portfolio-header></portfolio-header>
 				<h3>Perrelle Designs</h3>
 			</div>
