--- a/browser/js/navbar/navbar.html
+++ b/browser/js/navbar/navbar.html
@@ -1,6 +1,6 @@
 <div class="row">
   <nav class="navbar navbar-static-top text-center" id="top-menu" role="navigation">
-    <div class="container">
+    <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-target="#navbarCollapse" data-toggle="collapse">
           <span class="icon-bar"></span>
