--- a/browser/js/pdesigns/pdesigns.html
+++ b/browser/js/pdesigns/pdesigns.html
@@ -1,6 +1,6 @@
 <section>
 	<div class='container-fluid'>
-		<div class="row text-center">
+		<div class="text-center">
 			<div class="header">
 				<portfolio-header></portfolio-header>
 				<h3>Perrelle Designs</h3>
