minor edit to home page

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -16,7 +16,7 @@
 			</header>
 			<div class="row">
 				<div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-					<p>I love building innovative and meaningful products and am looking for opportunities to join an innovative and fast-paced product management team.   I am currently working as a full stack developer at RUIn Gaming, a start-up developing a game scheduling web application.  I also oversee some of the operations of Perrelle Designs, a home decor manufacturing and retail business that I founded.   Prior to becoming a developer, I practiced as a litigation attorney for over five years in New York.</p>
+					<p>I love building innovative and meaningful products and helping people.  I am looking for opportunities to join an innovative and fast-paced product management or customer/client success team.   I am currently working as a full stack developer at RUIn Gaming, a start-up developing a game scheduling web application.  I also oversee some of the operations of Perrelle Designs, a home decor manufacturing and retail business that I founded.   Prior to becoming a developer, I practiced as a litigation attorney for over five years in New York.</p>
 					<br>
 					<p>When not working, I love being outdoors, cooking, playing games and watching movies.   My ideal day would include a round of golf, backyard barbeque, and a good movie.
 					</p>
