--- a/browser/index.html
+++ b/browser/index.html
@@ -34,9 +34,15 @@
     <script src="/js/portfolio-header/portfolio-header.directive.js"></script>
 </head>
 
-<body ng-app="Portfolio">
+<!-- <body ng-app="Portfolio">
     <navbar></navbar>
     <div id="main" ui-view></div>
     <footer></footer>
+</body> -->
+<body>
+    <div>
+        <p>Site currently under construction</p>
+        <p>We hope to be available shortly</p>
+    </div>
 </body>
 </html>
